@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.5 2002/08/25 19:22:04 jlam Exp $
+@comment $NetBSD: PLIST,v 1.6 2003/10/20 15:28:23 agc Exp $
 bin/db3_archive
 bin/db3_checkpoint
 bin/db3_deadlock
@@ -12,6 +12,7 @@ bin/db3_verify
 include/db3/cxx_common.h
 include/db3/cxx_except.h
 include/db3/db.h
+include/db3/db_185.h
 include/db3/db_cxx.h
 lib/libdb3.a
 lib/libdb3.la
